--- a/action.yml
+++ b/action.yml
@@ -1,30 +1,45 @@
-name: 'Azure Pages DevTest'
-description: 'SimpleDeploy'
+name: "Azure Static Web Apps Deploy"
+description: "Deploys an application to Azure Static Web Apps"
+branding:
+  icon: "upload-cloud"
+  color: "blue"
 inputs:
-  azure_pages_api_token:
-    description: 'Azure Pages Api Token'
-    required: true
-    default: ''
   action:
-    description: 'Action to perform'
+    description: "Action to perform"
     required: true
-    default: 'upload'
-  app_source_location:
-    description: 'Location of App Source Files to Build'
+  app_location:
+    description: "Directory location of the application source code"
+    required: true
+  azure_static_web_apps_api_token:
+    description: "Required token"
+    required: true
+  api_build_command:
+    description: "Custom command for Oryx to run when building Azure Functions source code"
     required: false
-    default: 'app'
-  api_source_location:
-    description: 'Location of Api Source Files to Build'
+  api_location:
+    description: "Directory location of the Azure Functions source code"
     required: false
-    default: 'api'
   app_artifact_location:
-    description: 'Location of App Artifacts'
+    description: "Identical in use to output_location"
     required: false
-    default: '.'
-  api_artifact_location:
-    description: 'Location of Api Artifacts'
+  output_location:
+    description: "Directory location of the compiled application code after building"
     required: false
-    default: '.'
+  app_build_command:
+    description: "Custom command for Oryx to run when building application source code"
+    required: false
+  repo_token:
+    description: "Token for interacting with the Github repository. Currently used only for commenting on Pull Requests."
+    required: false
+  routes_location:
+    description: "Directory location where the routes.json file can be found in the source code"
+    required: false
+  skip_app_build:
+    description: "Skips the build step for the application source code if set to true."
+    required: false
+outputs:
+  static_web_app_url:
+    description: "Url of the application"
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
+  using: "docker"
+  image: "Dockerfile"
